force-app/main/default/objects/MakeandSupplier__c/MakeandSupplier__c.object-meta.xml
<CustomObject>
    <description>Pac Point-DN011520 - Created for PVL Sprint 3 Phase 1</description>
    <label>Make and Supplier</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Make and Supplier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Makes and Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>