force-app/main/default/objects/MakeandSupplier__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>Pac Point-DN011520 - Created for PVL Sprint 3 Phase 1</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>