force-app/main/default/objects/MakeandSupplier__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Pac Point-DN011520 - Created for PVL Sprint 3 Phase 1</description>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABC-ABCCOACH&amp;BUS</fullName>
            </value>
            <value>
                <fullName>ACCU-ACCUBUILTVEHICLES</fullName>
            </value>
            <value>
                <fullName>ACURA-ACURA</fullName>
            </value>
            <value>
                <fullName>ADI-ALEXANDERDENNISINC</fullName>
            </value>
            <value>
                <fullName>AIMC-AMERICANIRONHORSEMOTORCYCLECOMPANY</fullName>
            </value>
            <value>
                <fullName>ALFAALFAROMEO-ALFAROMEO</fullName>
            </value>
            <value>
                <fullName>ALLEN-ALLEN-ASLEYVANS-</fullName>
            </value>
            <value>
                <fullName>AMEMER-AMERICANEMBERGENCYVEHICLES</fullName>
            </value>
            <value>
                <fullName>AMERI-AMERICANSHUTTLEBUS</fullName>
            </value>
            <value>
                <fullName>AMGEN-AMGEN</fullName>
            </value>
            <value>
                <fullName>AMTRS-AMERITRANSBUSES</fullName>
            </value>
            <value>
                <fullName>ANDER-ANDERSONPRODUCTS</fullName>
            </value>
            <value>
                <fullName>APRIL-APRILIAPIAGGIO</fullName>
            </value>
            <value>
                <fullName>ARBOC-ARBOCMOBILITY</fullName>
            </value>
            <value>
                <fullName>ATK-ATK</fullName>
            </value>
            <value>
                <fullName>AUDI-AUDI</fullName>
            </value>
            <value>
                <fullName>AUTO-AUTOCARPRODUCTS</fullName>
            </value>
            <value>
                <fullName>AUTOX-AUTOCARXPEDITOR</fullName>
            </value>
            <value>
                <fullName>BENTL-BENTLEY</fullName>
            </value>
            <value>
                <fullName>BIGDO-BIGDOGMOTORCYCLES</fullName>
            </value>
            <value>
                <fullName>BLKJK-BLACKJACK</fullName>
            </value>
            <value>
                <fullName>BLUE-BLUEBIRDBUS</fullName>
            </value>
            <value>
                <fullName>BLUR-BLUR</fullName>
            </value>
            <value>
                <fullName>BMW-BMWAUTOMOBILES</fullName>
            </value>
            <value>
                <fullName>BMWMC-BMWMOTORCYCLES</fullName>
            </value>
            <value>
                <fullName>BRAU2-BRAUNCORPORATIONMOBILITYVEHICLES</fullName>
            </value>
            <value>
                <fullName>BRAUN-BRAUNAMBULANCES</fullName>
            </value>
            <value>
                <fullName>BUDDY-BUDDY</fullName>
            </value>
            <value>
                <fullName>BUELL-BUELL</fullName>
            </value>
            <value>
                <fullName>BUICK-BUICK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>