force-app/main/default/objects/MakeandSupplier__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Pac Point-DN011520 - Created for PVL Sprint 3 Phase 1</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>