force-app/main/default/objects/MakeandSupplier__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pac Point-DN011520 - Created for PVL Sprint 3 Phase 1</description>
    <label>Supplier</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Makes and Supplies To</relationshipLabel>
    <relationshipName>Makes_and_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>