force-app/main/default/objects/MakeandSupplier__c/fields/SuppliesTo__c.field-meta.xml
<CustomField>
    <fullName>SuppliesTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN01152019-Created for PVL Phase 1 Sprint 3</description>
    <label>Supplies To</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Makes and Suppliers</relationshipLabel>
    <relationshipName>MakesandSuppliesTo</relationshipName>
    <type>Lookup</type>
</CustomField>