force-app/main/default/objects/MakeandSupplier__c/fields/TermDate__c.field-meta.xml
<CustomField>
    <fullName>TermDate__c</fullName>
    <description>Pac Point-DN011520 - Created for PVL Sprint 3 Phase 1</description>
    <label>Term Date</label>
    <type>Date</type>
</CustomField>